# CMake_CC

./: CMakeLists.txt  COPYRIGHT  README  linux_armv7_eabihf.cmake  linux_armv7_eabisf.cmake  linux_armv8.cmake  run.sh
doc/: hello.txt
lib/: CMakeLists.txt  hello.c  hello.h  xml_reader.c  xml_reader.h
src/: CMakeLists.txt  main.c
